[package]
default-run = "train"
edition = "2021"
name = "test-candle-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = {version = "0.3.2", features = ["cudnn"]}
candle-datasets = "0.3.2"
candle-nn = {version = "0.3.2", features = ["cuda"]}
candle-transformers = {version = "0.3.2", features = ["cuda"]}
clap = {version = "4.4.14", features = ["derive"]}
hf-hub = "0.3.2"
image = "0.24.8"
indicatif = "0.17.7"
serde_json = "1.0.111"
tokenizers = "0.15.1"
