[package]
default-run = "train"
edition = "2021"
name = "test-candle-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = {version = "0.4.1", features = ["cudnn"]}
candle-datasets = "0.4.1"
candle-nn = {version = "0.4.1", features = ["cuda"]}
clap = {version = "4.4.14", features = ["derive"]}
image = "0.24.8"
indicatif = "0.17.7"
